--- a/assignment-05/index.html
+++ b/assignment-05/index.html
@@ -13,11 +13,24 @@
         <ul>
           <li>1 cup butter, softened</li>
           <li>1 cup white sugar</li>
+          <li>1 cup packed brown sugar</li>
+          <li>2 eggs</li>
+          <li>2 teaspoons vanilla extract</li>
+          <li>1 teaspoon baking soda</li>
+          <li>2 teaspoons hot water</li>
+          <li>1/2 teaspoon salt</li>
+          <li>3 cups all-purpose flour</li>
+          <li>2 cups chocolate chips</li>
         </ul>
       <h2>Directions</h2>
         <ol>
-          <li></<li>
-          <li></<li>
+          <li>Cream together the butter and sugars until smooth.</li>
+          <li>Beat in the eggs one at a time</li>
+          <li>Stir in vanilla</li>
+          <li>Dissolve baking soda in hot water</li>
+          <li>Add baking soda and salt</li>
+          <li>Stir in flour</li>
+          <li>Add chocolate chips</li>
         </ol>
       <h3>Contact Me</h3>
   </body>
