--- a/assignment-04/about.html
+++ b/assignment-04/about.html
@@ -9,6 +9,6 @@
   </body>
 </html>
 
-[Edgar Allan Poe](./Edgar-Allan-Poe.jpg)
+[Edgar Allan Poe](./images/Edgar-Allan-Poe.jpg)
 
 [index.html](./index.html)
