--- a/assignment-05/index.html
+++ b/assignment-05/index.html
@@ -10,6 +10,7 @@
 
   <body>
       <h1>Ingredients</h1>
+        <b> Preheat oven to 350 degrees F</b>
         <ul>
           <li>1 cup butter, softened</li>
           <li>1 cup white sugar</li>
@@ -23,6 +24,7 @@
           <li>2 cups chocolate chips</li>
         </ul>
       <h2>Directions</h2>
+        <b>Preheat oven to 350 degrees F</b>
         <ol>
           <li>Cream together the butter and sugars until smooth.</li>
           <li>Beat in the eggs one at a time</li>
@@ -32,6 +34,16 @@
           <li>Stir in flour</li>
           <li>Add chocolate chips</li>
         </ol>
+        <b>Cook for about 10 minutes</b>
       <h3>Contact Me</h3>
+        <a href="mailto:katie.schlichenmayer@umconnect.umt.edu">Email Me!</a>
+        <address>The University of Montana<br />
+          32 Campus Dr<br />
+          Missoula, MT 59812
+        </address>
   </body>
 </html>
+
+[Cookie](./images/screenshot5.jpeg)
+
+[Recipe Website](https://www.allrecipes.com/recipe/10813/best-chocolate-chip-cookies/)
