--- a/assignment-07/index.html
+++ b/assignment-07/index.html
@@ -32,23 +32,109 @@
 
   <body>
     <div class="container">
-      Art
+      <h1>Art</h1>
     </div>
 
     <div class="container">
-      Audio
+      <h1>Audio</h1>
+      <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/205000158&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/big_rich" title="Big &amp; Rich" target="_blank" style="color: #cccccc; text-decoration: none;">Big &amp; Rich</a> · <a href="https://soundcloud.com/big_rich/save-a-horse-ride-a-cowboy" title="Save a Horse (Ride a Cowboy)" target="_blank" style="color: #cccccc; text-decoration: none;">Save a Horse (Ride a Cowboy)</a>
     </div>
 
     <div class="container">
-      Video
+      <h1>Video</h1>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/S9ZbuIRPwFg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+    <div class="container lyrics">
+      <p>I am a self-hosted video!</p>
+
+      <video>
+        <source src="" type="">
+        <source src="" type="">
+      </video>
     </div>
 
     <div class="container">
-      Lyrics
+      <h1>Lyrics</h1>
+      <p>
+                DUM-DE-DE-DUM, DE-DE-DUM-DE-DE-DUM, DE-DAA-DAAAAA
+        DUM-DE-DE-DUM, DE-DE-DUM-DE-DE-DUM, DE-DAA-DAA-DAA-DAA-DAAAA!
+        Well, I walk into the room
+        Passing out hundred dollar bills
+        And it kills and it thrills like the horns on my Silverado grill
+        And I buy the bar a double round of crown
+        And everybody's getting down
+        An' this town ain't never gonna be the same.
+        Cause I saddle up my horse
+        And I ride into the city
+        I make a lot of noise
+        Cause the girls
+        They are so pretty
+        Riding up and down Broadway
+        On my old stud Leroy
+        And the girls say
+        Save a horse, ride a cowboy.
+        Everybody says
+        Save a horse, Ride a cowboy
+        Well I don't give a dang about nothing
+        I'm singing and Bling- Blanging
+        While the girls are drinking
+        Long necks down!
+        And I wouldn't trade ol' Leroy
+        Or my Chevrolet for your Escalade
+        Or your freak parade
+        I'm the only John Wayne left in this town
+        And I saddle up my horse
+        And I ride into the city
+        I make a lot of noise
+        Cause the girls
+        They are so pretty
+        Riding up and down Broadway
+        On my old stud Leroy
+        And the girls say
+        Save a horse, ride a cowboy.
+        Everybody says
+        Save a horse, Ride a cowboy
+        I'm a thourough-bred
+        That's what she said
+        In the back of my truck bed
+        As I was gettin' buzzed on suds
+        Out on some back country road.
+        We where flying high
+        Fine as wine, having ourselves a big and rich time
+        And I was going, just about as far as she'd let me go.
+        But her evaluation
+        Of my cowboy reputation
+        Had me begging for salvation
+        All night long
+        So I took her out giggin frogs
+        Introduced her to my old bird dog
+        And sang her every Willie Nelson song I could think of
+        And we made love
+        And I saddled up my horse
+        And I ride into the city
+        I make a lot of noise
+        Cause the girls
+        They are so pretty
+        Riding up and down Broadway
+        On my old stud Leroy
+        And the girls say
+        Save a horse, ride a cowboy.
+        Everybody says
+        Save a horse, Ride a cowboy
+        What? What?
+        Save A Horse Ride A Cowboy
+        Everybody says
+        Save a Horse Ride a cowboy.
+      </p>
+    </div>
+
+    <div class="container lyrics">
     </div>
 
     <div class="container">
-      Copyright
+      <h1>Copyright</h1>
     </div>
+
   </body>
 </html>
