--- a/assignment-07/index.html
+++ b/assignment-07/index.html
@@ -31,6 +31,13 @@
   </head>
 
   <body>
+    <div class="container lyrics">
+      <p>I am a self-hosted video!</p>
+
+      <video width="400" height="240" preload controls>
+        <source src="./media/mart-logo-animated.mp4" type="video/mp4;codecs="avc1.42Eo1E,mp4a.40.2">
+        <source src="./media/mart-logo-animated.webm" type="video/webm;codecs="vp8,vorbis">
+      </video>
     <div class="container">
       <h1>Art</h1>
     </div>
@@ -43,15 +50,6 @@
     <div class="container">
       <h1>Video</h1>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/S9ZbuIRPwFg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
-
-    <div class="container lyrics">
-      <p>I am a self-hosted video!</p>
-
-      <video>
-        <source src="" type="">
-        <source src="" type="">
-      </video>
     </div>
 
     <div class="container">
