--- a/assignment-07/index.html
+++ b/assignment-07/index.html
@@ -31,13 +31,6 @@
   </head>
 
   <body>
-    <div class="container lyrics">
-      <p>I am a self-hosted video!</p>
-
-      <video width="400" height="240" preload controls>
-        <source src="./media/mart-logo-animated.mp4" type="video/mp4;codecs="avc1.42Eo1E,mp4a.40.2">
-        <source src="./media/mart-logo-animated.webm" type="video/webm;codecs="vp8,vorbis">
-      </video>
     <div class="container">
       <h1>Art</h1>
     </div>
@@ -128,10 +121,16 @@
     </div>
 
     <div class="container lyrics">
+      <h1>Copyright</h1>
+      <p>I do not own this material, it was used as a school project!</p>
+
+      <video poster="./media/mart-logo-poster.jpg" width="400" height="240" preload controls>
+        <source src="./media/mart-logo-animated.mp4" type="video/mp4;codecs="avc1.42Eo1E,mp4a.40.2">
+        <source src="./media/mart-logo-animated.webm" type="video/webm;codecs="vp8,vorbis">
+      </video>
     </div>
 
-    <div class="container">
-      <h1>Copyright</h1>
+    <div class="container lyrics">
     </div>
 
   </body>
