--- a/assignment-07/index.html
+++ b/assignment-07/index.html
@@ -33,6 +33,7 @@
   <body>
     <div class="container">
       <h1>Art</h1>
+      <<source src="./images/image7.jpg">
     </div>
 
     <div class="container">
@@ -40,7 +41,7 @@
       <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/205000158&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/big_rich" title="Big &amp; Rich" target="_blank" style="color: #cccccc; text-decoration: none;">Big &amp; Rich</a> · <a href="https://soundcloud.com/big_rich/save-a-horse-ride-a-cowboy" title="Save a Horse (Ride a Cowboy)" target="_blank" style="color: #cccccc; text-decoration: none;">Save a Horse (Ride a Cowboy)</a>
     </div>
 
-    <div class="container">
+    <div class="container lyrics">
       <h1>Video</h1>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/S9ZbuIRPwFg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
@@ -128,6 +129,7 @@
         <source src="./media/mart-logo-animated.mp4" type="video/mp4;codecs="avc1.42Eo1E,mp4a.40.2">
         <source src="./media/mart-logo-animated.webm" type="video/webm;codecs="vp8,vorbis">
       </video>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2728.167949655201!2d-113.98740214903019!3d46.86006717903985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x535dcc33f19815cb%3A0x9c296b8546ca9abf!2sUniversity%20of%20Montana!5e0!3m2!1sen!2sus!4v1623954734213!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>"
     </div>
 
     <div class="container lyrics">
