--- a/assignment-07/index.html
+++ b/assignment-07/index.html
@@ -33,7 +33,7 @@
   <body>
     <div class="container">
       <h1>Art</h1>
-      <<img src="./images/image7.jpg" alt=""> 
+      <img src="./images/image7.jpg" alt=""> 
     </div>
 
     <div class="container">
