--- a/assignment-07/index.html
+++ b/assignment-07/index.html
@@ -1,4 +1,4 @@
-<!<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en-US" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -33,7 +33,7 @@
   <body>
     <div class="container">
       <h1>Art</h1>
-      <img src="./images/image7.jpg" alt=""> 
+      <img src="./images/image7.jpg" alt="">
     </div>
 
     <div class="container">
