--- a/assignment-08/index.html
+++ b/assignment-08/index.html
@@ -11,7 +11,7 @@
     <title>Assignment 8</title>
     <style>
       body {
-        background-color: green;
+        background-color: lightgreen;
         text-align: left;
       }
       nav {
@@ -34,6 +34,21 @@
     </nav>
 
     <div id="main">
-      <h1></h1>
+      <h1>How to Make Slime</h1>
+      <b>Ingredients</b>
+      <ul>
+        <li>8-ounce bottle Elmer's white school glue</li>
+        <li>1 1/2-2 Tablespoons contact saline solution</li>
+        <li>1 Tablespoon baking soda</li>
+        <li>Food coloring, optional</li>
+      </ul>
+      <h2>Directions</h2>
+      <ol>
+        <li>Squeeze the bottle of glue into a bowl. Add your food coloring if desired and stir until combined.</li>
+        <li>Mix in saline solution. If it's too sticky add more saline solution. The more you add, the thicker it'll be. The less you add, the slimier it'll be.</li>
+        <li>Using your hands, knead the slime until it holds together.</li>
+        <li>Store slime in a container with lid</li>
+      </ol>
+      <img src="./images/slime.jpg" alt="">
   </body>
 </html>
