--- a/assignment-08/about.html
+++ b/assignment-08/about.html
@@ -32,7 +32,10 @@
       <a href="./about.html">About</a>
       <a href="./contact.html">Contact</a>
     </nav>
-    
+
     <h2>This is the about page.</h2>
+    <h3>Why I choose this project</h3>
+    <b>I choose to show how to make slime because when thinking about what to do for this assignment I thought about my sister. When my sister was younger, she used to make slime all of the time. She had so many different ingredients to make slime and I always thought it was such a strange hobby to have. Slime is super simple to make, I am personally not a fan of the way slime feels but I find that a lot of kids love to make and play with it. If you would like to learn more about how to make slime, you can google it and find other methods.</b>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/eaALjlyKDZI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </body>
 </html>
