--- a/assignment-08/index.html
+++ b/assignment-08/index.html
@@ -35,14 +35,14 @@
 
     <div id="main">
       <h1>How to Make Slime</h1>
-      <b>Ingredients</b>
+      <h2>Ingredients</h2>
       <ul>
         <li>8-ounce bottle Elmer's white school glue</li>
         <li>1 1/2-2 Tablespoons contact saline solution</li>
         <li>1 Tablespoon baking soda</li>
         <li>Food coloring, optional</li>
       </ul>
-      <h2>Directions</h2>
+      <h3>Directions</h3>
       <ol>
         <li>Squeeze the bottle of glue into a bowl. Add your food coloring if desired and stir until combined.</li>
         <li>Mix in saline solution. If it's too sticky add more saline solution. The more you add, the thicker it'll be. The less you add, the slimier it'll be.</li>
@@ -50,5 +50,6 @@
         <li>Store slime in a container with lid</li>
       </ol>
       <img src="./images/slime.jpg" alt="">
+      <iframe width="560" height="315">
   </body>
 </html>
