--- a/assignment-08/contact.html
+++ b/assignment-08/contact.html
@@ -32,7 +32,27 @@
       <a href="./about.html">About</a>
       <a href="./contact.html">Contact</a>
     </nav>
-    
+
     <h2>This is the contact page.</h2>
+
+    <form action="" method="post">
+      What color slime would you make?
+      <input type="text" name="color">
+
+      Would you add glitter to your slime?
+      <input type="text">
+
+      <br><br>
+
+      Enter questions or comments below:
+      <br>
+      <textarea cols="35" rows="10">
+      </textarea>
+
+      <br><br>
+
+      <input type="button" value="Submit">
+    </form>
+    <img src="./images/slime2.jpg" alt="">
   </body>
 </html>
