--- a/assignment-08/about.html
+++ b/assignment-08/about.html
@@ -11,7 +11,7 @@
     <title>About</title>
     <style>
       body {
-        background-color: green;
+        background-color: lightgreen;
         text-align: left;
       }
       nav {
