--- a/assignment-09/index.html
+++ b/assignment-09/index.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <div class="square" id="green">
+    <div class="square" id="blue">
       <h1>I am heading 1</h1>
     </div>
 
@@ -21,10 +21,11 @@
       <h1>I am heading 1</h1>
     </div>
 
-    <div class="square" id="orange">
+    <div class="square" id="burntorange">
       <h1>I am heading 1</h1>
     </div>
-    
+
       <h1>I am heading 1</h1>
+      <img src="./images/color.jpg">
   </body>
 </html>
