--- a/assignment-09/index.html
+++ b/assignment-09/index.html
@@ -10,19 +10,25 @@
     content="Katie Schlichenmayer">
     <title>Assignment 9</title>
     <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <style>
+      body {
+        background-color: tan;
+        text-align: left;
+      }
+    </style>
   </head>
 
   <body>
     <div class="square" id="blue">
-      <h1>I am heading 1</h1>
+      <h1>1960's Color Palette</h1>
     </div>
 
     <div class="square" id="yellow">
-      <h1>I am heading 1</h1>
+      <h1>The 60s included bright colors along with pop art and psychedelic designs</h1>
     </div>
 
     <div class="square" id="burntorange">
-      <h1>I am heading 1</h1>
+      <h1>This era was a huge turning point for graphic design and was more into creative, bright and experiemental styles.</h1>
     </div>
 
       <h1>I am heading 1</h1>
