--- a/assignment-09/index.html
+++ b/assignment-09/index.html
@@ -24,14 +24,16 @@
     </div>
 
     <div class="square" id="yellow">
-      <h1>The 60s included bright colors along with pop art and psychedelic designs</h1>
+      <b>The 60s included bright colors along with pop art and psychedelic designs.</b>
     </div>
 
+    <img src="./images/popart.jpg" width="400" height="240">
+
     <div class="square" id="burntorange">
-      <h1>This era was a huge turning point for graphic design and was more into creative, bright and experiemental styles.</h1>
+      <b>This era was a huge turning point for graphic design and was more into creative, bright and experiemental styles.</b>
     </div>
 
       <h1>I am heading 1</h1>
-      <img src="./images/color.jpg">
+      <img src="./images/color.jpg" width="400" height="240">
   </body>
 </html>
