--- a/assignment-10/index.html
+++ b/assignment-10/index.html
@@ -7,6 +7,10 @@
     <meta name="author"content="Katie Schlichenmayer">
     <title>Assignment 10</title>
     <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&family=Staatliches&display=swap" rel="stylesheet">
+
   </head>
 
   <body>
