--- a/assignment-10/index.html
+++ b/assignment-10/index.html
@@ -23,6 +23,6 @@
 
     <br><br>
 
-    <a href="https://americanliterature.com/childrens-stories/little-red-riding-hood" target="_blank"></a>
+    <a href="https://americanliterature.com/childrens-stories/little-red-riding-hood" target="_blank">Read More!</a>
   </body>
 </html>
