--- a/assignment-12/services.html
+++ b/assignment-12/services.html
@@ -1,4 +1,4 @@
-<!DOCTYPE htmo>
+<!DOCTYPE html>
 <html land="en-US" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -8,6 +8,6 @@
     <title>Assignment 12</title>
   </head>
   <body>
-    
+
   </body>
   </html>
