--- a/assignment-12/index.html
+++ b/assignment-12/index.html
@@ -1,27 +1,33 @@
-<!DOCTYPE htmo>
+<!DOCTYPE html>
 <html land="en-US" dir="ltr">
   <head>
     <meta charset="utf-8">
     <meta name="viewport"content="width=devide-width,initial-scale.0">
-    <meta name="description"content="...">
+    <meta name="description"content="Earrings">
     <meta name="author"content="Katie Schlichenmayer">
-    <title>Clay Earrings</title>
+    <link rel="stylesheet" type="text/css" href="./css/fonts.css"
+    <link rel="stylesheet" type="text/css" href="./css/menu.css"
+    <link rel="stylesheet" type="text/css" href="./css/style.css"
+    <title>Homemade Clay Earrings</title>
   </head>
-
   <body>
     <div class="main-container">
       <header>
         <!-- Site links for menu: -->
-        <div id="site-links">
-          <a href="#" class="menu-item">Home</a>
-          <a href="#" class="menu-item">Archives</a>
-          <a href="#" class="menu-item">About</a>
-          <a href="#" class="menu-item">Contact</a>
-          <a href="#" class="menu-item">Sister Sites</a>
-        </div>
+        <menu id="navigation">
+          <div id="site-links">
+            <a href="#" class="menu-item">Home</a>
+            <a href="#" class="menu-item">Archives</a>
+            <a href="#" class="menu-item">About</a>
+            <a href="#" class="menu-item">Contact</a>
+            <a href="#" class="menu-item">Sister Sites</a>
+          </div>
+        </menu>
 
         <div id="social-links">
-          <a href
+          <a href="https://www.facebook.com">Facebook</a>
+          <a href="https://www.instagram.com">Instagram</a>
+          <a href="https://www.twitter.com">Twitter</a>
         </div>
 
         <!-- Area for site logo, title, and slogan: -->
