--- a/assignment-12/contact.html
+++ b/assignment-12/contact.html
@@ -5,10 +5,53 @@
     <meta name="viewport"content="width=devide-width,initial-scale.0">
     <meta name="description"content="...">
     <meta name="author"content="Katie Schlichenmayer">
-    <title>Assignment 12</title>
+    <title>Contact</title>
+    <style>
+      body {
+        background-color: lightyellow;
+        text-align: left;
+      }
+      nav {
+        background-color: lightgreen;
+        text-align: center;
+      }
+      a {
+        background-color: white;
+        color: lightpink;
+        padding: 5px;
+      }
+    </style>
   </head>
 
-  <body>
+<body>
+  <nav>
+    <a href="./index.html">Home</a>
+    <a href="./about.html">About</a>
+    <a href="./contact.html">Contact</a>
+  </nav>
 
-  </body>
-  </html>
+  <h2>This is the contact page.</h2>
+
+  <form action="" method="post">
+    What color earrings are you more likely to buy?
+    <input type="text" name="color">
+
+    What shapes would you like to see more of?
+    <input type="text">
+
+    Are the quality of the earrings good?
+    <input type="text">
+
+    <br><br>
+
+    Enter questions or comments below:
+    <br>
+    <textarea cols="35" rows="10">
+    </textarea>
+
+    <br><br>
+
+    <input type="button" value="Submit">
+  </form>
+</body>
+</html>
