--- a/assignment-12/index.html
+++ b/assignment-12/index.html
@@ -9,6 +9,17 @@
     <link rel="stylesheet" type="text/css" href="./css/menu.css"
     <link rel="stylesheet" type="text/css" href="./css/style.css"
     <title>Homemade Clay Earrings</title>
+    <style>
+      ul {
+        background-color: lightpink;
+        text-align: center;
+        padding: 10px;
+      }
+      li {
+        display: inline;
+        padding: 5px;
+      }
+    </style>
   </head>
   <body>
     <div class="main-container">
