--- a/assignment-12/index.html
+++ b/assignment-12/index.html
@@ -1,48 +1,41 @@
 <!DOCTYPE html>
-<html land="en-US" dir="ltr">
+<html lang="en-US" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport"content="width=devide-width,initial-scale.0">
-    <meta name="description"content="Earrings">
-    <meta name="author"content="Katie Schlichenmayer">
-    <link rel="stylesheet" type="text/css" href="./css/fonts.css"
-    <link rel="stylesheet" type="text/css" href="./css/menu.css"
-    <link rel="stylesheet" type="text/css" href="./css/style.css"
-    <title>Homemade Clay Earrings</title>
+    <meta name="viewport"
+    content="width=device-width,inital-scale=1.0">
+    <meta name="description"
+    content="...">
+    <meta name="author"
+    content="Katie Schlichenmayer">
+    <title>Assignment 8</title>
     <style>
-      ul {
-        background-color: lightpink;
-        text-align: center;
-        padding: 10px;
+      body {
+        background-color: lightyellow;
+        text-align: left;
       }
-      li {
-        display: inline;
+      nav {
+        background-color: lightgreen;
+        text-align: center;
+      }
+      a {
+        background-color: white;
+        color: black;
         padding: 5px;
       }
     </style>
   </head>
+
   <body>
-    <div class="main-container">
-      <header>
-        <!-- Site links for menu: -->
-        <menu id="navigation">
-          <div id="site-links">
-            <a href="#" class="menu-item">Home</a>
-            <a href="#" class="menu-item">Archives</a>
-            <a href="#" class="menu-item">About</a>
-            <a href="#" class="menu-item">Contact</a>
-            <a href="#" class="menu-item">Sister Sites</a>
-          </div>
-        </menu>
+    <nav>
+      <a href="./index.html">Home</a>
+      <a href="./about.html">About</a>
+      <a href="./contact.html">Contact</a>
+    </nav>
 
-        <div id="social-links">
-          <a href="https://www.facebook.com">Facebook</a>
-          <a href="https://www.instagram.com">Instagram</a>
-          <a href="https://www.twitter.com">Twitter</a>
-        </div>
-
-        <!-- Area for site logo, title, and slogan: -->
-        <div class="site-heading">
-          <img src="./images/earrings.webp" class="under-img"
+    <div id="main">
+      <h1>Handmade Clay Earrings</h1>      
+      <img src="./images/earrings.webp" alt="">
+      <iframe width="560" height="315">
   </body>
-  </html>
+</html>
