--- a/assignment-12/about.html
+++ b/assignment-12/about.html
@@ -1,14 +1,41 @@
 <!DOCTYPE html>
-<html land="en-US" dir="ltr">
+<html lang="en-US" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport"content="width=devide-width,initial-scale.0">
-    <meta name="description"content="...">
-    <meta name="author"content="Katie Schlichenmayer">
-    <title>Assignment 12</title>
+    <meta name="viewport"
+    content="width=device-width,inital-scale=1.0">
+    <meta name="description"
+    content="...">
+    <meta name="author"
+    content="Katie Schlichenmayer">
+    <title>About</title>
+    <style>
+      body {
+        background-color: lightyellow;
+        text-align: left;
+      }
+      nav {
+        background-color: lightgreen;
+        text-align: center;
+      }
+      a {
+        background-color: white;
+        color: black;
+        padding: 5px;
+      }
+    </style>
   </head>
 
   <body>
+    <nav>
+      <a href="./index.html">Home</a>
+      <a href="./about.html">About</a>
+      <a href="./contact.html">Contact</a>
+    </nav>
 
+    <h2>About Us!</h2>
+    <h3>Why I choose this project</h3>
+    <b>I choose to show how to make slime because when thinking about what to do for this assignment I thought about my sister. When my sister was younger, she used to make slime all of the time. She had so many different ingredients to make slime and I always thought it was such a strange hobby to have. Slime is super simple to make, I am personally not a fan of the way slime feels but I find that a lot of kids love to make and play with it. If you would like to learn more about how to make slime, you can google it and find other methods.</b>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/eaALjlyKDZI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </body>
-  </html>
+</html>
