--- a/assignment-12/contact.html
+++ b/assignment-12/contact.html
@@ -30,14 +30,18 @@
     <a href="./contact.html">Contact</a>
   </nav>
 
-  <h2>This is the contact page.</h2>
+  <h2>Contact Us!</h2>
 
   <form action="" method="post">
     What color earrings are you more likely to buy?
     <input type="text" name="color">
 
+    <br><br>
+
     What shapes would you like to see more of?
     <input type="text">
+
+    <br><br>
 
     Are the quality of the earrings good?
     <input type="text">
@@ -53,5 +57,6 @@
 
     <input type="button" value="Submit">
   </form>
+  <img src="./images/earrings2.jpg">
 </body>
 </html>
