--- a/assignment-12/index.html
+++ b/assignment-12/index.html
@@ -35,6 +35,7 @@
 
     <div id="main">
       <h1>Handmade Clay Earrings</h1>
+      <b>This is where some basic information can be put along with prices of the earrings.</b>
       <img src="./images/earrings.webp" alt="">
   </body>
 </html>
