--- a/assignment-12/contact.html
+++ b/assignment-12/contact.html
@@ -17,7 +17,7 @@
       }
       a {
         background-color: white;
-        color: lightpink;
+        color: black;
         padding: 5px;
       }
     </style>
