--- a/assignment-12/index.html
+++ b/assignment-12/index.html
@@ -8,6 +8,10 @@
     content="...">
     <meta name="author"
     content="Katie Schlichenmayer">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&family=Staatliches&display=swap" rel="stylesheet">
     <title>Assignment 8</title>
     <style>
       body {
